# chore-tracker

./: .gitignore  CMakeLists.txt  README.md  app.cpp  app.hpp  chore.cpp  chore.hpp  encryption.cpp  encryption.hpp  houseFile.csv  household.cpp  household.hpp  household_manager.cpp  household_manager.hpp  main.cpp  settingsConfiguration.hpp  settings_configuration.hpp  sprint_report_1.md  sprint_report_2.md  user.cpp  user.hpp  userManager.cpp  userManager.hpp  user_manager.cpp  user_manager.hpp
ChoreTracker/: CMakeLists.txt  CreateChore.qml  EditChore.qml  Household.qml  Main.qml  Main.ui.qml  Settings.qml  WindowManager.qml  backend.cpp  backend.h  chore.cpp  chore.hpp  encryption.hpp  houseFile.csv  household.cpp  household.hpp  household_manager.cpp  household_manager.hpp  main.cpp  qmldir  user.hpp  userFile.csv  user_manager.cpp  user_manager.hpp
